--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,8 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #1a759b;
+  color:black; 
 }
 
 @media screen and (max-width: 996px) {
