Begynt paa Featureliste

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,11 +1,21 @@
 .features {
-  display: flex;
+  display: grid;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
 }
 
+.komp{
+  border: solid 1px black;
+  border-radius: 50%;
+}
+.features > .container >.row{
+  border: solid 1px black;
+  border-radius: 80% 2px black;
+}
+
 .featureSvg {
   height: 200px;
   width: 200px;
+  border-radius: 100%;
 }
