--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,17 +1,64 @@
 .features {
-  display: grid;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
 }
 
-.komp{
-  border: solid 1px black;
-  border-radius: 50%;
+.features > .container {
+  align-items: center;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
 }
-.features > .container >.row{
-  border: solid 1px black;
-  border-radius: 80% 2px black;
+
+.FeatureList2{
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.title{
+  cursor: pointer;
+  margin: auto;
+  border: solid 4px #06adf4;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  transition: 250ms;
+}
+
+.title:hover{
+  
+}
+
+.title{
+  transition: 250ms;  
+  text-align: center;
+}
+
+.title>a{
+  text-decoration: none;
+}
+
+.title>a:hover>{
+  text-decoration: none;
+}
+
+.title>a>h1:hover{
+  font-size: 1.9rem;
+}
+
+.title>a>h1{
+  color: #e9f8ff;
+  font-size: 1.7rem;
+  line-height: 2rem;
+  margin-top: 3.5rem;
+  transition: 250ms;
+}
+
+.FeatureList1{
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .featureSvg {
