--- a/docs/css/HovedStyret.module.css
+++ b/docs/css/HovedStyret.module.css
@@ -12,6 +12,10 @@
     margin-bottom: 5rem;
     cursor: pointer;
 }
+.header{
+    text-align: center;
+    font-weight: 300;
+}
 
 .circle{
     margin: auto;
