Fikset theme og laget template

--- a/docs/css/HovedStyret.module.css
+++ b/docs/css/HovedStyret.module.css
@@ -30,7 +30,7 @@
     width: 9rem;
     height: 9rem;
     position: relative;
-    border: solid #1a759b 2px;
+    border: solid #06ADF4 2px;
     border-radius: 50%;
     transition: 250ms;
 }
