--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,7 +1,7 @@
 .features {
   align-items: center;
   padding: 2rem 0;
-  width: 40%;
+  width: 640px;
   height: 40%;
   margin: auto;
 }
@@ -13,18 +13,18 @@
   margin: auto;
 }
 
-@media screen and (max-width: 600px) {
-  .FeatureList1{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+@media screen and (min-width: 640px) {
+  .FeatureList2{
+      display: grid;
+      /*grid-template-columns: repeat(2, 1fr);*/
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
   }
 }
 
-@media screen and (min-width: 600px) {
-  .FeatureList2{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-  }
+@media screen and (max-width: 640px) {
+    .features {
+        width: 100%;
+    }
 }
 
 .FeatureList1{
@@ -32,16 +32,17 @@
 }
 
 .FeatureList2{
-  align-items: center;
+    align-items: center;
 }
 
 .title{
   cursor: pointer;
   margin: auto;
+  margin-top: 20px;
   border: solid 11px #06adf4;
   border-radius: 100%;
-  width: 219px;
-  height: 219px;
+  width: 210px;
+  height: 210px;
   transition: 270ms;
   text-align: center;
 }
