--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,7 @@
   background-image: url('/img/Bubbles.jpeg');
   background-color: #e9f8ff;
   background-position: center;
-  background-size: 100%;
+  background-size: cover;
   background-repeat:no-repeat;
   color:black; 
 }
