--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -6,11 +6,19 @@
   margin: auto;
 }
 
-.features > .container {
+/*.features > .container {
   align-items: center;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   margin: auto;
+}*/
+
+.features > .container {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  gap: 10px;
 }
 
 @media screen and (max-width: 600px) {
@@ -56,10 +64,6 @@
 }
 
 .FeatureList1 > .title > a > h1 {
-  /* border-radius: 1%;
-  display: table-cell;
-  vertical-align: middle;
-  margin: auto; */
   font-size: 1.7rem;
   line-height: 2rem;
   margin-top: 4.9rem;
@@ -84,3 +88,54 @@ html[data-theme='dark'] {
   transition: 250ms;
   font-size: 1.9rem;
 }
+
+
+/*KATEGORIER (3 NEDERST PÅ HOVEDSIDENE) START*/
+.kategorier {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  gap: 10px;
+}
+.kategorier > div {
+  display: grid;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding: 10px;
+  min-height: 300px;
+  height: 80%;
+  background-size: cover;
+  background-position: center;
+}
+.kategorier > div > a {
+  margin: 10px;
+  text-decoration: none;
+  font-size: 13px;
+  position: relative;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  }
+  .kategorier > div > a:hover{
+  color: #fff;
+  transition: 1s;
+  text-shadow: 8px 8px 10px #000000;
+  font-size: 30px;
+  }
+
+  .kategorier h1{
+  padding: 150px;
+  }
+
+  @media (max-width: 800px){
+    .kategorier > div > a:hover{
+      font-size: 25px;
+      }
+  }
+/*KATEGORIER (3 NEDERST PÅ HOVEDSIDENE) START*/
