--- a/docs/css/Nordnet.module.css
+++ b/docs/css/Nordnet.module.css
@@ -31,3 +31,29 @@
     top: -1.8rem;
     margin: auto
 }
+
+.stock_info_container {
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .stock_info_table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+  }
+  
+  .stock_info_table td {
+    padding: 8px;
+    border: 1px solid #ddd;
+  }
+  
+  .stock_info_table td strong {
+    margin-right: 5px;
+    font-weight: bold;
+  }
+  
+  /* Add more styles as needed */
+  
